tests/snapshots/run_wpt_conformance__litert_reduceLogSumExp_float32_1D_tensor_all_negative_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_log_sum_exp.https.any.js reduceLogSumExp float32 1D tensor all negative default options, litert
 Failed to build graph: failed to compile model: Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reduceLogSumExpInput: f32[24];
  }

  nodes {
    [reduceLogSumExpOutput] = reduceLogSumExp(reduceLogSumExpInput, axes=null, keepDimensions=false, label="");
  }

  outputs { reduceLogSumExpOutput; }
}
